upload - final version for the phase one (code by Dickson & upload by Samuel)
As titled